--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,15 @@
   padding: 6px 0px;
 }
 
+@media (max-width: 425px) {
+  .header__top {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding: 6px 15px;
+  }
+}
+
 .header__image {
   height: 28px;
   width: 30px;
@@ -42,6 +51,15 @@
   color: #0f1a34;
   font-size: 1rem;
   line-height: 1.5;
+}
+
+@media (max-width: 425px) {
+  .header__text {
+    max-width: 260px;
+    white-space: nowrap;
+    font-size: 12px;
+    overflow: auto;
+  }
 }
 
 .header__row {
@@ -103,6 +121,79 @@
   background-color: transparent;
 }
 
+@media (max-width: 768px) {
+  .header__input {
+    padding: 11px 10px 11px 32px;
+    margin: 0px 0px 0px auto;
+  }
+  .header__input > button {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+  }
+}
+
+.header__icon {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .header__icon {
+    display: block;
+    position: absolute;
+    top: -30px;
+    right: 10px;
+    width: 30px;
+    height: 18px;
+    cursor: pointer;
+    z-index: 5;
+  }
+  .header__icon span {
+    -webkit-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    top: 8px;
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+  }
+  .header__icon span:first-child {
+    top: 0px;
+  }
+  .header__icon span:last-child {
+    top: auto;
+    bottom: 0px;
+  }
+  .header__icon.active span {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  .header__icon.active span:first-child {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    top: 8px;
+  }
+  .header__icon.active span:last-child {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    bottom: 8px;
+  }
+}
+
+@media (max-width: 480px) {
+  .header__icon {
+    top: -25.5px;
+    right: -5px;
+    width: 25px;
+  }
+}
+
 .header__buttons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -114,6 +205,29 @@
 
 .header__buttons > *:not(:last-child) {
   margin: 0px 24px 0px 0px;
+}
+
+@media (max-width: 768px) {
+  .header__buttons {
+    position: fixed;
+    top: 0;
+    right: -200%;
+    width: 22.85rem;
+    height: 100%;
+    z-index: 2;
+    background-color: #b9c6e6;
+    overflow: auto;
+    padding: 60px 0px;
+    -webkit-transition: right 0.6s ease 0s;
+    transition: right 0.6s ease 0s;
+    display: block;
+  }
+  .header__buttons > *:not(:last-child) {
+    margin: 0px auto 25px auto;
+  }
+  .header__buttons.menu_open {
+    right: 0%;
+  }
 }
 
 .header__button > button {
@@ -141,8 +255,16 @@
   background-color: #070a11;
 }
 
-.header__language {
-  width: 40px;
+@media (max-width: 768px) {
+  .header__button > button {
+    margin: 0 auto 25px auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .header__language {
+    text-align: center;
+  }
 }
 
 .header__pages {
@@ -158,6 +280,14 @@
 
 .header__pages > *:not(:last-child) {
   margin: 0px 23px 0px 0px;
+}
+
+@media (max-width: 768px) {
+  .header__pages {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .header__page-profile {
