--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+//////////////////////////Variables///////////////////////////////////////
+
 //////////////////////////HEADER///////////////////////////////////////
 .header {
     position: relative;
@@ -91,7 +93,7 @@
             height: 20px;
             background-color: transparent;
         }
-        @media (max-width: 768px){
+        @media (max-width: 768px) {
             padding: 11px 10px 11px 32px;
             margin: 0px 0px 0px auto;
             & > button {
@@ -275,6 +277,142 @@
     }
 }
 ////////////////MAIN////////////////////////////////////////////////
+.main {
+    padding: 2.28rem 0 8rem 0;
+    &__route {
+        font-size: 0.85rem;
+        line-height: 1.5;
+        margin: 0px 0px 40px 0px;
+        & > span {
+            color: #747778;
+        }
+    }
+
+    &__title {
+        font-size: 2rem;
+        margin: 0px 0px 32px 0px;
+    }
+
+    &__row {
+        display: flex;
+    }
+
+    &__column-filters {
+        flex: 0 1 20.86%;
+    }
+
+    &__column-catalog {
+        flex: 1 1 auto;
+    }
+}
+.column-main {
+    &__button {
+        color: #5c5f60;
+        font-size: 22px;
+        background-color: transparent;
+        margin: 0px 0px 25px 0px;
+        line-height: 1.5;
+    }
+
+    &__filter {
+        &:not(:last-child) {
+            margin: 0px 0px 2px 0px;
+        }
+    }
+
+    &__btn {
+        padding: 16px 24px;
+        text-align: left;
+        width: 100%;
+        line-height: 1.5;
+        position: relative;
+        & > svg {
+            position: absolute;
+            right: 24px;
+            top: 50%;
+            transform: translate(0, -50%) rotate(0deg);
+            transition: transform 0.4s ease 0s;
+        }
+        &._active > svg {
+            transform: translate(0, -50%) rotate(180deg);
+        }
+    }
+
+    &__category {
+        padding: 24px;
+        border: 1px solid #eff1f1;
+    }
+}
+.catalog-column {
+    &__sorting {
+        display: flex;
+        align-items: center;
+        max-width: 280px;
+        margin: 0px 0px 0px auto;
+        color: #5c5f60;
+        & > span {
+            display: inline-block;
+            white-space: nowrap;
+            font-size: 12px;
+            line-height: 1.5;
+            padding: 0px 12px 0px 0px;
+        }
+        position: relative;
+        &::after {
+            content: "";
+            z-index: 2;
+            position: absolute;
+            width: 1px;
+            height: 100%;
+            right: 25px;
+            top: 0;
+            background-color: #fff;
+        }
+    }
+}
+.form-check {
+    display: flex;
+    align-items: center;
+    &:not(:last-child) {
+        margin: 0px 0px 14px 0px;
+    }
+}
+.form-check-input {
+    width: 17px;
+    height: 17px;
+    z-index: 0;
+    visibility: hidden;
+    position: relative;
+    &::after {
+        content: "";
+        position: absolute;
+        visibility: visible;
+        width: 17px;
+        height: 17px;
+        border: 1px solid #c4c7c7;
+        border-radius: 3px;
+    }
+    &:checked::before {
+        content: url("../img/icons/select.svg");
+        position: absolute;
+        visibility: visible;
+    }
+}
+.form-check-label {
+    padding: 0px 0px 0px 16px;
+    line-height: 1.5;
+    color: #444748;
+}
+.form-select {
+    background-color: #eff1f1;
+    padding: 8px 12px;
+    border-radius: 12px;
+    font-size: 12px;
+    border: none;
+    background-image: url("../img/icons/arrow.svg");
+    background-size: 10px 10px;
+}
+
 ////////////////FOOTER////////////////////////////////////////////////
 .footer {
     background-color: #eff1f1;
