--- a/scss/style.scss
+++ b/scss/style.scss
@@ -279,6 +279,12 @@
 ////////////////MAIN////////////////////////////////////////////////
 .main {
     padding: 2.28rem 0 8rem 0;
+    @media (max-width: 992px) {
+        padding: 2.28rem 0 5rem 0;
+    }
+    @media (max-width: 768px) {
+        padding: 2rem 0 3rem 0;
+    }
     &__route {
         font-size: 0.85rem;
         line-height: 1.5;
@@ -295,6 +301,9 @@
 
     &__row {
         display: flex;
+        @media (max-width: 768px) {
+            display: block;
+        }
     }
 
     &__column-filters {
@@ -306,12 +315,36 @@
     }
 }
 .column-main {
+    margin: 0px 24px 0px 0px;
+    @media (max-width: 768px) {
+        margin: 0px 0px 15px 0px;
+    }
     &__button {
         color: #5c5f60;
         font-size: 22px;
         background-color: transparent;
         margin: 0px 0px 25px 0px;
         line-height: 1.5;
+        cursor: default;
+        position: relative;
+        & > svg {
+            display: none;
+        }
+        @media (max-width: 768px){
+            cursor: pointer;
+            margin: 0px 0px 15px 0px;
+            & > svg {
+                display: block;
+                position: absolute;
+                right: -25px;
+                top: 50%;
+                transform: translate(0, -50%) rotate(0deg);
+                transition: transform 0.4s ease 0s;
+            }
+            &._active > svg {
+                transform: translate(0, -50%) rotate(180deg);
+            }
+        }
     }
 
     &__filter {
@@ -345,10 +378,11 @@
 }
 .catalog-column {
     &__sorting {
+        position: relative;
         display: flex;
         align-items: center;
         max-width: 280px;
-        margin: 0px 0px 0px auto;
+        margin: 0px 0px 24px auto;
         color: #5c5f60;
         & > span {
             display: inline-block;
@@ -357,16 +391,116 @@
             line-height: 1.5;
             padding: 0px 12px 0px 0px;
         }
-        position: relative;
+
         &::after {
             content: "";
             z-index: 2;
             position: absolute;
             width: 1px;
             height: 100%;
-            right: 25px;
+            right: 50px;
             top: 0;
             background-color: #fff;
+        }
+        @media (max-width: 768px) {
+            margin: 0px 0px 15px 0px;
+        }
+    }
+    &__clothing {
+        display: grid;
+        justify-content: center;
+        gap: 24px;
+        grid-template-columns: repeat(auto-fit, minmax(290px, 312px));
+        //grid-auto-rows: 1fr;
+    }
+
+    &__article {
+        display: grid;
+        grid-auto-flow: row;
+        grid-template: 263px 1fr / 1fr;
+        padding: 45px 24px 24px;
+        border: 1px solid #eff1f1;
+    }
+
+    &__img {
+        max-width: 207px;
+        max-height: 263px;
+        margin: 0 auto;
+        & > img {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+    }
+
+    &__character {
+        font-size: 10px;
+        line-height: 1.5;
+        display: grid;
+        grid-template: auto auto 1fr auto / 1fr;
+    }
+
+    &__vogue {
+        justify-self: start;
+        padding: 4px 8px;
+        border-radius: 4px;
+        background-color: #b4fff0;
+        margin: 0px 0px 20px 0px;
+    }
+
+    &__brand {
+        font-weight: 500;
+        color: #5c5f60;
+    }
+
+    &__description {
+        font-size: 14px;
+        margin: 0px 0px 26px 0px;
+    }
+
+    &__row {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__column-price {
+        margin: 0px 10px 0px 0px;
+    }
+
+    &__cost {
+        text-decoration: line-through;
+        color: #747778;
+        font-size: 12px;
+    }
+
+    &__discount {
+        font-size: 14px;
+        font-weight: 500;
+    }
+
+    &__location {
+        font-size: 12px;
+        text-align: right;
+        position: relative;
+        &::before {
+            content: url("../img/icons/location.svg");
+            position: absolute;
+            top: 3px;
+            right: 50px;
+            width: 12px;
+            height: 12px;
+            object-fit: cover;
+        }
+    }
+
+    &__name {
+        font-size: 14px;
+        & > img {
+            width: 20px;
+            height: 20px;
+            overflow: hidden;
+            margin: 0px 8px 0px 0px;
         }
     }
 }
@@ -404,6 +538,9 @@
     color: #444748;
 }
 .form-select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     background-color: #eff1f1;
     padding: 8px 12px;
     border-radius: 12px;
@@ -411,6 +548,8 @@
     border: none;
     background-image: url("../img/icons/arrow.svg");
     background-size: 10px 10px;
+    background-position: 97% 50%;
+    background-repeat: no-repeat;
 }
 
 ////////////////FOOTER////////////////////////////////////////////////
