--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,9 @@
             max-height: 100%;
             overflow: hidden;
         }
+        @media (max-width: 480px) {
+            display: none;
+        }
     }
 
     &__text {
@@ -330,7 +333,7 @@
         & > svg {
             display: none;
         }
-        @media (max-width: 768px){
+        @media (max-width: 768px) {
             cursor: pointer;
             margin: 0px 0px 15px 0px;
             & > svg {
@@ -382,7 +385,7 @@
         display: flex;
         align-items: center;
         max-width: 280px;
-        margin: 0px 0px 24px auto;
+        margin: 0px 0px 27px auto;
         color: #5c5f60;
         & > span {
             display: inline-block;
@@ -411,6 +414,10 @@
         justify-content: center;
         gap: 24px;
         grid-template-columns: repeat(auto-fit, minmax(290px, 312px));
+        margin: 0px 0px 56px 0px;
+        @media (max-width: 992px) {
+            margin: 0px 0px 20px 0px;
+        }
         //grid-auto-rows: 1fr;
     }
 
@@ -420,6 +427,15 @@
         grid-template: 263px 1fr / 1fr;
         padding: 45px 24px 24px;
         border: 1px solid #eff1f1;
+        position: relative;
+        & > .catalog-column__like {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            width: 20px;
+            height: 20px;
+            background-color: transparent;
+        }
     }
 
     &__img {
@@ -441,14 +457,19 @@
     }
 
     &__vogue {
+        text-transform: uppercase;
         justify-self: start;
         padding: 4px 8px;
         border-radius: 4px;
         background-color: #b4fff0;
         margin: 0px 0px 20px 0px;
+        &.disabled {
+            visibility: hidden;
+        }
     }
 
     &__brand {
+        text-transform: uppercase;
         font-weight: 500;
         color: #5c5f60;
     }
@@ -479,15 +500,23 @@
         font-weight: 500;
     }
 
+    &__column-seller {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
     &__location {
-        font-size: 12px;
         text-align: right;
+        font-size: 12px;
         position: relative;
+        padding: 0px 0px 0px 4px;
+        margin: 0px 0px 4px 0px;
         &::before {
             content: url("../img/icons/location.svg");
             position: absolute;
-            top: 3px;
-            right: 50px;
+            top: 2px;
+            left: -10px;
             width: 12px;
             height: 12px;
             object-fit: cover;
@@ -502,6 +531,45 @@
             overflow: hidden;
             margin: 0px 8px 0px 0px;
         }
+    }
+    &__bottom {
+        display: flex;
+        justify-content: center;
+    }
+}
+.pagination {
+    display: flex;
+}
+.page-item {
+    margin: 0px 8px 0px 0px;
+    &.active > .page-link {
+        border-color: #2d3132;
+        font-weight: 500;
+    }
+    @media (max-width: 768px){
+        display: none;
+        &.active {
+            display: block;
+        }  
+    }
+}
+.prev {
+    margin: 0px 8px 0px 0px;
+}
+.page-link,
+.page-button {
+    padding: 7px 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100px;
+    border: 1px solid #c4c7c7;
+    font-size: 12px;
+    line-height: 1.5;
+    background-color: transparent;
+    transition: all 0.3s ease 0s;
+    &:hover {
+        border-color: #414445;
     }
 }
 .form-check {
@@ -660,16 +728,6 @@
         }
         &:not(:last-child) {
             margin: 0px 0px 12px 0px;
-        }
-    }
-}
-
-////////////////QUERY////////////////////////////////////////////////
-
-@media (max-width: 480px) {
-    .header {
-        &__image {
-            display: none;
         }
     }
 }
