--- a/scss/style.scss
+++ b/scss/style.scss
@@ -226,6 +226,28 @@
         }
     }
 
+    &__page {
+        position: relative;
+        & > span {
+            display: flex;
+            justify-content:center;
+            align-items: center;
+            position: absolute;
+            top: -8px;
+            right: -7px;
+            font-size: 10px;
+            border-radius: 50%;
+            width: 14px;
+            height: 14px;
+            padding: 4px;
+            background-color: #EFF1F1;
+        } 
+        & > span.red {
+            background-color: #FF5449;
+            color: #FFFFFF;
+        } 
+    }
+
     &__page-profile {
         width: 32px;
         height: 32px;
@@ -601,9 +623,16 @@
     }
 }
 .form-check-label {
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: space-between;
     padding: 0px 0px 0px 16px;
     line-height: 1.5;
     color: #444748;
+    & > span {
+        
+        color: #747778;
+    }
 }
 .form-select {
     -webkit-appearance: none;
