--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
         url('../fonts/Stolzl-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 @font-face {
     font-family: 'Stolzl';
@@ -15,6 +16,7 @@
         url('../fonts/Stolzl-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
 /*Обнуление*/
 *{padding:0;margin:0;border:0;}
