--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,3 @@
-//////////////////////////Variables///////////////////////////////////////
-
 //////////////////////////HEADER///////////////////////////////////////
 .header {
     position: relative;
@@ -251,7 +249,7 @@
     &__page-profile {
         width: 32px;
         height: 32px;
-        & > img {
+        & > a > img {
             width: 100%;
             height: 100%;
             overflow: hidden;
@@ -336,7 +334,7 @@
     }
 
     &__column-catalog {
-        flex: 1 1 auto;
+        flex: 1 1 79.14%;
     }
 }
 .column-main {
@@ -394,6 +392,67 @@
         &._active > svg {
             transform: translate(0, -50%) rotate(180deg);
         }
+    }
+
+    &__range {
+        margin: 0px 0px 25px 0px;
+        &.ui-slider {
+            position: relative;
+            background: #C4C7C7;
+            height: 4px;
+            box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2), 1px 1px 5px rgba(255, 255, 255, 1);
+        }
+        & > .ui-slider-handle{
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            background-color: #5C5F60;
+            border-radius: 4px;
+            top: 50%;
+            transform: translate(0, -50%);
+        }
+    }
+
+    &__row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0px -12px;
+    }
+
+    &__column {
+        flex: 0 1 50%;
+        max-width: 120px;
+        padding: 0 12px;
+    }
+
+    &__cost { 
+        font-size: 12px;
+        color: #2D3132;
+        position: relative;
+        padding: 0px 0px 13px 0px;
+        &::before{
+            content:'';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: #c4c7c7;
+        }
+        & > label {
+            display: flex;
+            flex-direction: column;
+            font-size: 10px;
+            line-height: 1.5;
+            color: #747778;
+        }
+    }
+
+    &__value {
+        margin: 8px 0px 0px 0px;
+        font-size: 12px;
+        line-height: 1.5;
     }
 
     &__category {
@@ -580,6 +639,7 @@
 }
 .page-link,
 .page-button {
+    color: inherit;
     padding: 7px 13px;
     display: flex;
     justify-content: center;
@@ -620,6 +680,9 @@
         content: url("../img/icons/select.svg");
         position: absolute;
         visibility: visible;
+    }
+    &:checked::after {
+        border: none;
     }
 }
 .form-check-label {
