--- a/scss/style.scss
+++ b/scss/style.scss
@@ -297,6 +297,17 @@
                 background-color: #2d3132;
             }
         }
+        &.active {
+            &::after {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                background-color: #2d3132;
+            }
+        }
     }
 }
 ////////////////MAIN////////////////////////////////////////////////
