--- a/scss/style.scss
+++ b/scss/style.scss
@@ -249,10 +249,17 @@
     &__page-profile {
         width: 32px;
         height: 32px;
+        position: relative;
         & > a > img {
             width: 100%;
             height: 100%;
             overflow: hidden;
+        }
+        & > svg {
+            position: absolute;
+            top: 50%;
+            right: -13px;
+            transform: translate(0, -50%);
         }
     }
 
@@ -489,7 +496,7 @@
 
         &::after {
             content: "";
-            z-index: 2;
+            z-index: 1;
             position: absolute;
             width: 1px;
             height: 100%;
